Profile dependency. Added first profile dependency. Created activity and injected ProfileComponent

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,19 +22,33 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    /**
+     * Google Imports
+     */
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.2.1'
+    /**
+     * Dagger2 Imports
+     */
     apt "com.google.dagger:dagger-compiler:2.0"
     compile "com.google.dagger:dagger:2.0"
+    provided "org.glassfish:javax.annotation:10.0-b28"
+    /**
+     * RxJava Imports
+     */
     compile "io.reactivex:rxjava:1.0.14"
     compile 'io.reactivex:rxandroid:1.0.1'
-    provided "org.glassfish:javax.annotation:10.0-b28"
-
+    /**
+     * REST API Imports and Supports for it
+     */
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.4.0'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.sqlbrite:sqlbrite:0.1.0'
-
-    compile 'com.android.support:recyclerview-v7:23.0.1'
+    /**
+     * ButterKnife
+     */
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
